--- a/J_ChamaMed/ChamaMed/pom.xml
+++ b/J_ChamaMed/ChamaMed/pom.xml
@@ -67,6 +67,14 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/com.fazecast/jSerialComm -->
+		<dependency>
+			<groupId>com.fazecast</groupId>
+			<artifactId>jSerialComm</artifactId>
+			<version>2.9.3</version>
+		</dependency>
+
+
 
 	</dependencies>
 
